--- a/Grocery.html
+++ b/Grocery.html
@@ -8,33 +8,49 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-<div>
-    <nav><center>
-      <h1 class="Resturant">Welcome To Online Shopping</center></h1>
+  <div>
+    <nav>
+      <img src="image/navbarlogo.png" alt="No Image" width="188px" height="113px">
     </nav>
   </div>
-    <br/><br/>
-  <center>
-      <a href="index.html" target="_blank">Home</a>
-<a href="Grocery.html" target="_blank">Grocery</a>
-<a href="menu.html" target="_blank">Fast Food</a>
-<a href="Contactus.html" target="_blank">Contact Us</a></center>
+  <br>
+  <p> <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;&nbsp;
+    <a href="Grocery.html" target="_blank">Grocery</a>&nbsp;&nbsp;&nbsp;
+      <a href="menu.html" target="_blank">Fast Food</a>&nbsp;&nbsp;&nbsp;
+     <a href="chinese.html" target="_blank">Chinese</a>&nbsp;&nbsp;&nbsp;
+   
+ <hr />
+ <img src="image/pic3" alt="No Image" height="585px" width="1209px" >
     
-  <h6><center><strong>All items are fresh </strong></center></h6>
+  <h2><center><strong><em>All items are fresh </strong></center></em></h2>
   <ol type="1">
+   <img src="image/potatopic-removebg-preview (1).png" alt="No Image">
     <li>Potato 1Kg.................60<del>70<ins></li><br>
+      <img src="image/tomatopic-removebg-preview.png" alt="No Image">
   <li>Tomato 1Kg.................100<del><ins>120</li><br>
+    <img src="image/onionpic-removebg-preview.png" alt="No Image">
   <li>Onion 1Kg.................40<del><ins>45</li><br>
+    <img src="image/peaspic-removebg-preview.png" alt="No Image">
   <li>Peas 500gm.................100<del><ins>110</li><br>
+    <img src="image/basmatirice-removebg-preview.png" alt="No Image">
   <li>Basmati Rice 1Kg.................220<del><ins>230</li><br>
+    <img src="image/grainspic-removebg-preview.png" alt="No Image">
   <li>Grains 1Kg.................260<del><ins>268</li><br>
+    <img src="image/breadpic-removebg-preview.png" alt="No Image">
   <li>Bread.................90<del><ins>100</li><br>
+    <img src="image/garlic_pic-removebg-preview.png" alt="No Image">
    <li>Garlic 250gm.................70<del><ins>60</li> <br>
+    <img src="image/cookingoilpic-removebg-preview.png" alt="No Image">
    <li>CookingOil 1Kg.................320<del><ins>350</li><br>
   </ol>
   <h4><center><strong>Get Express Delivery in 45Mins</strong><center></h4>
   <h4><strong><center>Get Free Delivery on order above 1000Rupees</strong></center></h4>
-    
+<br><br><center>
+<img src="image/pic5" alt="No Image"></center>
+
+<br><br><br><br><br><br>
+<h4><center><em>Made By Muhammad Ahmed</center></em></h4>
+<h4><center><em>WMA-192009</h4></center></em>
 
 </body>
 
