--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>3rd Assignment</title>
+  <title>Home</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
   <div>
-    <nav><center>
-      <h1 class="Resturant">Welcome To Online Shopping</center></h1>
+    <nav>
+      <img src="image/navbarlogo.png" alt="No Image" width="188px" height="113px">
     </nav>
   </div>
-  <br/>
-  <center>
-       <p>
-         <a href="index.html" target="_blank">Home</a>
-    <a href="Grocery.html" target="_blank">Grocery</a>
-     <a href="menu.html" target="_blank">Fast Food</a>
-<a href="Contactus.html" target="_blank">Contact Us</a>
+  
+  <p> <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;&nbsp;
+     <a href="Grocery.html" target="_blank">Grocery</a>&nbsp;&nbsp;&nbsp;
+       <a href="menu.html" target="_blank">Fast Food</a>&nbsp;&nbsp;&nbsp;
+       <a href="chinese.html" target="_blank">Chinese</a>&nbsp;&nbsp;&nbsp;
+      
+  <hr /><center>
+  <img src="image/homepage.jpg" alt="No Image" height="685px" width="1009px" ></center>
+ 
 </center><br><br>
-  <h4><center>We Are Available In </center></h4>
+          <h4>We Are Available In</h4>
   <ol class="CityNames" type="i">
     <li>Karachi</li>
      <li>Lahore</li>
@@ -34,8 +36,8 @@
   <p>Are you hungry? Did you have a long and stressful day? Interested in getting a cheesy pizza delivered to your office or looking to avoid the weekly shop? Then Online Shopping Pakistan is the right destination for you! Online Shopping offers you a long and detailed list of the best restaurants and shops near you to help make your every day easier.</p>
   <h3><strong>What's New?</strong></h3>
   <p>✓ Wide variety of restaurants and shops, an abundance of cuisines & products.<br/>✓ High quality delivery service.<br/>✓ Live chat feature to give App users instant help when they need it.<br/>✓ NEW: Online Shopping grocery delivery! Discover the best shops, pharmacies, bakeries and more near you.</p>
-  
-  
+  <br><br>
+ <center> <img src="image/pic5" alt="No Image" height="60%" width="40%"></center>
   
   <br><br><br><br><br><br>
   <h4><center><em>Made By Muhammad Ahmed</center></em></h4>
